[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/TileSets/Foreground.tres" type="TileSet" id=1]
[ext_resource path="res://UI/level-timer/TimerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/TileSets/Details.tres" type="TileSet" id=3]
[ext_resource path="res://assets/TileSets/Background.tres" type="TileSet" id=4]
[ext_resource path="res://UI/level-score/ScoreUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/Level_1/Signs/StartSign/StartSign.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Level_1/Signs/EndSign/EndSign.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/TileSets/Presents.tres" type="TileSet" id=13]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/Sound/8bit 8pack/Level 2.wav" type="AudioStream" id=16]
[ext_resource path="res://levels/Level_1/Level_1.gd" type="Script" id=38]
[ext_resource path="res://assets/Sprites/background.png" type="Texture" id=50]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 8, 32 )

[node name="Level-1" type="Node2D"]
script = ExtResource( 38 )
__meta__ = {
"_edit_lock_": true
}
timerStart = 1200

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 64 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -65536, 0, 0, -65535, 1, 0, -65534, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Collectible Tiles" type="TileMap" parent="."]
tile_set = ExtResource( 13 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65427, 0, 0, 327779, 0, 0, 589896, 0, 0, 1638457, 0, 0, 1769487, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Details" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65550, 49, 0, -65548, 49, 1, -131072, 23, 0, -131071, 22, 0, -131070, 22, 0, -131069, 22, 0, -131068, 24, 0, -131067, 22, 0, -131066, 23, 0, -131065, 25, 0, -131064, 23, 0, -131063, 23, 0, -131062, 27, 0, -131061, 26, 0, -131060, 22, 0, -131059, 23, 0, -131058, 23, 0, -131057, 23, 0, -131056, 27, 0, -131055, 24, 0, -131054, 22, 0, -131053, 23, 0, -131052, 25, 0, -131051, 23, 0, -131050, 24, 0, -65525, 26, 0, 65522, 49, 65536, 212, 33, 0, 214, 33, 0, 220, 33, 0, 196594, 49, 65537, 131286, 33, 0, 131292, 33, 0, 327666, 49, 65537, 262368, 33, 0, 458738, 49, 65537, 393440, 33, 0, 589810, 49, 65537, 524510, 33, 0, 524512, 33, 0, 720882, 49, 65537, 655562, 33, 0, 655564, 33, 0, 655584, 33, 0, 851954, 49, 65538, 786630, 33, 0, 786632, 33, 0, 786634, 33, 0, 786656, 33, 0, 917698, 33, 0, 917700, 33, 0, 917702, 33, 0, 1048752, 33, 0, 1048754, 33, 0, 1048756, 33, 0, 1179836, 32, 0, 1179862, 33, 0, 1179864, 33, 0, 1179866, 33, 0, 1179868, 33, 0, 1179870, 33, 0, 1179872, 33, 0, 1179874, 33, 0, 1179876, 33, 0, 1179878, 33, 0, 1310888, 33, 0, 1310890, 33, 0, 1310906, 33, 0, 1310908, 33, 0, 2097286, 32, 0, 2228358, 32, 0, 2359430, 32, 0, 2490496, 32, 0, 2490502, 32, 0, 2621572, 33, 0, 2621574, 33, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Foreground" type="TileMap" parent="."]
z_index = 2
tile_set = ExtResource( 1 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -524288, 37, 0, -524287, 9, 0, -524286, 9, 0, -524285, 9, 0, -524284, 9, 0, -524283, 9, 0, -524282, 9, 0, -524281, 9, 0, -524280, 9, 0, -524279, 9, 0, -524278, 9, 0, -524277, 9, 0, -524276, 9, 0, -524275, 9, 0, -524274, 9, 0, -524273, 9, 0, -524272, 9, 0, -524271, 9, 0, -524270, 9, 0, -524269, 9, 0, -524268, 9, 0, -524267, 9, 0, -524266, 9, 0, -524265, 9, 0, -524264, 9, 0, -524263, 9, 0, -524262, 9, 0, -524261, 9, 0, -524260, 9, 0, -458752, -1073741824, 0, -458751, 9, 0, -458750, 9, 0, -458749, 9, 0, -458748, 9, 0, -458747, 9, 0, -458746, 9, 0, -458745, 9, 0, -458744, 9, 0, -458743, 9, 0, -458742, 9, 0, -458741, 9, 0, -458740, 9, 0, -458739, 9, 0, -458738, 9, 0, -458737, 9, 0, -458736, 9, 0, -458735, 9, 0, -458734, 9, 0, -458733, 9, 0, -458732, 9, 0, -458731, 9, 0, -458730, 9, 0, -458729, 9, 0, -458728, 9, 0, -458727, 9, 0, -458726, 9, 0, -458725, 9, 0, -458724, 9, 0, -393216, -1073741824, 0, -393215, 9, 0, -393214, 9, 0, -393213, 9, 0, -393212, 9, 0, -393211, 9, 0, -393210, 9, 0, -393209, 9, 0, -393208, 9, 0, -393207, 9, 0, -393206, 9, 0, -393205, 9, 0, -393204, 9, 0, -393203, 9, 0, -393202, 9, 0, -393201, 9, 0, -393200, 9, 0, -393199, 9, 0, -393198, 9, 0, -393197, 9, 0, -393196, 9, 0, -393195, 9, 0, -393194, 9, 0, -393193, 9, 0, -393192, 9, 0, -393191, 9, 0, -393190, 9, 0, -393189, 9, 0, -393188, 9, 0, -393169, 9, 0, -393168, 9, 0, -393167, 9, 0, -393166, 9, 0, -393165, 9, 0, -393164, 9, 0, -393163, 9, 0, -393162, 9, 0, -393161, 9, 0, -393160, 9, 0, -393159, 9, 0, -393158, 9, 0, -393157, 9, 0, -393156, 9, 0, -393155, 9, 0, -393154, 9, 0, -327680, -1073741824, 0, -327679, 9, 0, -327678, 9, 0, -327677, 9, 0, -327676, 9, 0, -327675, 9, 0, -327674, 9, 0, -327673, 9, 0, -327672, 9, 0, -327671, 9, 0, -327670, 9, 0, -327669, 9, 0, -327668, 9, 0, -327667, 9, 0, -327666, 9, 0, -327665, 9, 0, -327664, 9, 0, -327663, 9, 0, -327662, 9, 0, -327661, 9, 0, -327660, 9, 0, -327659, 9, 0, -327658, 9, 0, -327657, 9, 0, -327656, 9, 0, -327655, 9, 0, -327654, 9, 0, -327653, 9, 0, -327652, 9, 0, -327633, 9, 0, -327632, 9, 0, -327631, 9, 0, -327630, 9, 0, -327629, 9, 0, -327628, 9, 0, -327627, 9, 0, -327626, 9, 0, -327625, 9, 0, -327624, 9, 0, -327623, 9, 0, -327622, 9, 0, -327621, 9, 0, -327620, 9, 0, -327619, 9, 0, -327618, 9, 0, -196609, 37, 0, -262144, 9, 0, -262143, 9, 0, -262142, 9, 0, -262141, 9, 0, -262140, 9, 0, -262139, 9, 0, -262138, 9, 0, -262137, 9, 0, -262128, 9, 0, -262127, 9, 0, -262126, 9, 0, -262125, 9, 0, -262124, 9, 0, -262123, 9, 0, -262122, 9, 0, -262121, 9, 0, -262120, 9, 0, -262119, 9, 0, -262118, 9, 0, -262117, 9, 0, -262116, 9, 0, -262102, 9, 0, -262101, 9, 0, -262100, 9, 0, -262099, 9, 0, -262098, 9, 0, -262097, 9, 0, -262096, 9, 0, -262095, 9, 0, -262094, 9, 0, -262093, 9, 0, -262092, 9, 0, -262091, 9, 0, -262090, 9, 0, -262089, 9, 0, -262088, 9, 0, -262087, 9, 0, -262086, 9, 0, -262085, 9, 0, -262084, 9, 0, -262083, 9, 0, -262082, 9, 0, -131073, -1073741824, 0, -196608, 9, 0, -196607, 9, 0, -196606, 9, 0, -196605, 9, 0, -196604, 9, 0, -196603, 9, 0, -196589, 9, 0, -196588, 9, 0, -196587, 9, 0, -196586, 9, 0, -196585, 9, 0, -196584, 9, 0, -196583, 9, 0, -196582, 9, 0, -196581, 9, 0, -196580, 9, 0, -196567, 9, 0, -196566, 9, 0, -196565, 9, 0, -196564, 9, 0, -196563, 9, 0, -196562, 9, 0, -196561, 9, 0, -196560, 9, 0, -196559, 9, 0, -196558, 9, 0, -196557, 9, 0, -196556, 9, 0, -196555, 9, 0, -196554, 9, 0, -196553, 9, 0, -196552, 9, 0, -196551, 9, 0, -196550, 9, 0, -196549, 9, 0, -196548, 9, 0, -196547, 9, 0, -196546, 9, 0, -65537, 1610612775, 0, -131072, 1610612773, 0, -131052, 9, 0, -131051, 9, 0, -131050, 9, 0, -131049, 9, 0, -131048, 9, 0, -131047, 9, 0, -131046, 9, 0, -131045, 9, 0, -131044, 9, 0, -131043, 9, 0, -131042, 9, 0, -131041, 9, 0, -131040, 9, 0, -131039, 9, 0, -131038, 9, 0, -131037, 9, 0, -131036, 9, 0, -131035, 9, 0, -131034, 9, 0, -131033, 9, 0, -131032, 9, 0, -131031, 9, 0, -131030, 9, 0, -131029, 9, 0, -131028, 9, 0, -131027, 9, 0, -131026, 9, 0, -131025, 9, 0, -131024, 9, 0, -131023, 9, 0, -131022, 9, 0, -131021, 9, 0, -131020, 9, 0, -131019, 9, 0, -131015, 9, 0, -131014, 9, 0, -131013, 9, 0, -131012, 9, 0, -131011, 9, 0, -131010, 9, 0, -65517, 9, 0, -65516, 9, 0, -65515, 9, 0, -65514, 9, 0, -65513, 9, 0, -65512, 9, 0, -65511, 9, 0, -65510, 9, 0, -65509, 9, 0, -65508, 9, 0, -65507, 9, 0, -65506, 9, 0, -65505, 9, 0, -65504, 9, 0, -65503, 9, 0, -65502, 9, 0, -65501, 9, 0, -65500, 9, 0, -65499, 9, 0, -65498, 9, 0, -65497, 9, 0, -65496, 9, 0, -65495, 9, 0, -65494, 9, 0, -65493, 9, 0, -65492, 9, 0, -65491, 9, 0, -65490, 9, 0, -65489, 9, 0, -65488, 9, 0, -65487, 9, 0, -65486, 9, 0, -65485, 9, 0, -65484, 9, 0, -65483, 9, 0, -65478, 9, 0, -65477, 9, 0, -65476, 9, 0, -65475, 9, 0, -65474, 9, 0, 65533, 37, 0, 65534, 0, 0, 65535, 0, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 18, 9, 0, 19, 9, 0, 20, 9, 0, 21, 9, 0, 22, 9, 0, 23, 9, 0, 24, 9, 0, 25, 9, 0, 26, 9, 0, 27, 9, 0, 28, 9, 0, 29, 9, 0, 30, 9, 0, 31, 9, 0, 32, 9, 0, 33, 9, 0, 34, 9, 0, 35, 9, 0, 36, 9, 0, 37, 9, 0, 38, 9, 0, 39, 9, 0, 40, 9, 0, 41, 9, 0, 42, 9, 0, 43, 9, 0, 44, 9, 0, 45, 9, 0, 54, 9, 0, 58, 9, 0, 59, 9, 0, 60, 9, 0, 61, 9, 0, 62, 9, 0, 131069, -1073741824, 0, 131070, 9, 0, 131071, 9, 0, 65536, 9, 0, 65537, 9, 0, 65538, 9, 0, 65539, 9, 0, 65540, 9, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65555, 9, 0, 65556, 9, 0, 65557, 9, 0, 65558, 9, 0, 65559, 9, 0, 65560, 9, 0, 65561, 9, 0, 65562, 9, 0, 65563, 9, 0, 65564, 9, 0, 65565, 9, 0, 65566, 9, 0, 65567, 9, 0, 65568, 9, 0, 65569, 9, 0, 65570, 9, 0, 65571, 9, 0, 65572, 9, 0, 65573, 9, 0, 65574, 9, 0, 65590, 9, 0, 65591, 9, 0, 65594, 9, 0, 65595, 9, 0, 65596, 9, 0, 65597, 9, 0, 65598, 9, 0, 196605, -1073741787, 0, 196606, 9, 0, 196607, 9, 0, 131072, 9, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 9, 0, 131078, 9, 0, 131079, 9, 0, 131080, 9, 0, 131081, 9, 0, 131082, 9, 0, 131083, 9, 0, 131084, 9, 0, 131085, 9, 0, 131091, 9, 0, 131092, 9, 0, 131093, 9, 0, 131094, 9, 0, 131095, 9, 0, 131096, 9, 0, 131097, 9, 0, 131098, 9, 0, 131099, 9, 0, 131100, 9, 0, 131101, 9, 0, 131102, 9, 0, 131103, 9, 0, 131104, 9, 0, 131105, 9, 0, 131106, 9, 0, 131130, 9, 0, 131131, 9, 0, 131132, 9, 0, 131133, 9, 0, 131134, 9, 0, 262142, -1073741787, 0, 262143, 9, 0, 196608, 9, 0, 196609, 9, 0, 196610, 9, 0, 196611, 9, 0, 196612, 9, 0, 196613, 9, 0, 196614, 9, 0, 196615, 9, 0, 196616, 9, 0, 196617, 9, 0, 196618, 9, 0, 196619, 9, 0, 196620, 9, 0, 196621, 9, 0, 196627, 9, 0, 196628, 9, 0, 196629, 9, 0, 196630, 9, 0, 196631, 9, 0, 196632, 9, 0, 196633, 9, 0, 196634, 9, 0, 196635, 9, 0, 196636, 9, 0, 196637, 9, 0, 196638, 9, 0, 196639, 9, 0, 196640, 9, 0, 196641, 9, 0, 196666, 9, 0, 196667, 9, 0, 196668, 9, 0, 196669, 9, 0, 196670, 9, 0, 327679, -1073741787, 0, 262144, 9, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262148, 9, 0, 262149, 9, 0, 262150, 9, 0, 262151, 9, 0, 262152, 9, 0, 262153, 9, 0, 262154, 9, 0, 262155, 9, 0, 262156, 9, 0, 262157, 9, 0, 262163, 9, 0, 262164, 9, 0, 262165, 9, 0, 262166, 9, 0, 262167, 9, 0, 262168, 9, 0, 262169, 9, 0, 262170, 9, 0, 262171, 9, 0, 262172, 9, 0, 262173, 9, 0, 262174, 9, 0, 262175, 9, 0, 262176, 9, 0, 262177, 9, 0, 262202, 9, 0, 262203, 9, 0, 262204, 9, 0, 262205, 9, 0, 262206, 9, 0, 327680, -1073741824, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 9, 0, 327689, 9, 0, 327690, 9, 0, 327691, 9, 0, 327692, 9, 0, 327693, 9, 0, 327699, 9, 0, 327700, 9, 0, 327701, 9, 0, 327702, 9, 0, 327703, 9, 0, 327704, 9, 0, 327705, 9, 0, 327706, 9, 0, 327707, 9, 0, 327708, 9, 0, 327709, 9, 0, 327710, 9, 0, 327711, 9, 0, 327712, 9, 0, 327713, 9, 0, 327715, 9, 0, 327716, 9, 0, 327717, 9, 0, 327737, 9, 0, 327738, 9, 0, 327739, 9, 0, 327740, 9, 0, 327741, 9, 0, 327742, 9, 0, 393216, -1073741824, 0, 393217, 9, 0, 393218, 9, 0, 393219, 9, 0, 393220, 9, 0, 393221, 9, 0, 393222, 9, 0, 393223, 9, 0, 393224, 9, 0, 393225, 9, 0, 393226, 9, 0, 393227, 9, 0, 393228, 9, 0, 393236, 9, 0, 393237, 9, 0, 393238, 9, 0, 393239, 9, 0, 393240, 9, 0, 393241, 9, 0, 393242, 9, 0, 393243, 9, 0, 393244, 9, 0, 393245, 9, 0, 393246, 9, 0, 393247, 9, 0, 393248, 9, 0, 393249, 9, 0, 393251, 9, 0, 393252, 9, 0, 393253, 9, 0, 393254, 9, 0, 393255, 9, 0, 393256, 9, 0, 393275, 9, 0, 393276, 9, 0, 393277, 9, 0, 393278, 9, 0, 458752, -1073741787, 0, 458753, 9, 0, 458754, 9, 0, 458755, 9, 0, 458756, 9, 0, 458757, 9, 0, 458758, 9, 0, 458759, 9, 0, 458760, 9, 0, 458761, 9, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458773, 9, 0, 458774, 9, 0, 458775, 9, 0, 458776, 9, 0, 458777, 9, 0, 458778, 9, 0, 458779, 9, 0, 458780, 9, 0, 458781, 9, 0, 458782, 9, 0, 458783, 9, 0, 458784, 9, 0, 458785, 9, 0, 458787, 9, 0, 458788, 9, 0, 458789, 9, 0, 458790, 9, 0, 458791, 9, 0, 458792, 9, 0, 458793, 9, 0, 524289, -1073741824, 0, 524290, 9, 0, 524291, 9, 0, 524292, 9, 0, 524293, 9, 0, 524294, 9, 0, 524295, 9, 0, 524296, 9, 0, 524297, 9, 0, 524298, 9, 0, 524299, 9, 0, 524311, 9, 0, 524312, 9, 0, 524313, 9, 0, 524314, 9, 0, 524315, 9, 0, 524316, 9, 0, 524317, 9, 0, 524318, 9, 0, 524319, 9, 0, 524320, 9, 0, 524323, 9, 0, 524324, 9, 0, 524325, 9, 0, 524326, 9, 0, 524327, 9, 0, 524328, 9, 0, 524329, 9, 0, 524330, 9, 0, 524331, 9, 0, 524332, 9, 0, 524333, 9, 0, 524334, 9, 0, 524335, 9, 0, 524336, 9, 0, 524337, 9, 0, 524338, 9, 0, 524339, 9, 0, 524340, 9, 0, 524341, 9, 0, 524342, 9, 0, 524343, 9, 0, 589825, -1073741787, 0, 589826, 9, 0, 589827, 9, 0, 589828, 9, 0, 589829, 9, 0, 589830, 9, 0, 589831, 9, 0, 589832, 9, 0, 589833, 9, 0, 589834, 9, 0, 589850, 9, 0, 589851, 9, 0, 589852, 9, 0, 589853, 9, 0, 589854, 9, 0, 589855, 9, 0, 589859, 9, 0, 589860, 9, 0, 589861, 9, 0, 589862, 9, 0, 589863, 9, 0, 589864, 9, 0, 589865, 9, 0, 589866, 9, 0, 589867, 9, 0, 589868, 9, 0, 589869, 9, 0, 589870, 9, 0, 589871, 9, 0, 589872, 9, 0, 589873, 9, 0, 589874, 9, 0, 589875, 9, 0, 589876, 9, 0, 589877, 9, 0, 589878, 9, 0, 589879, 9, 0, 589880, 9, 0, 589881, 9, 0, 589882, 9, 0, 589883, 9, 0, 589884, 9, 0, 589885, 9, 0, 589886, 9, 0, 655362, -1073741824, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655390, 9, 0, 655391, 9, 0, 655392, 9, 0, 655395, 9, 0, 655396, 9, 0, 655397, 9, 0, 655398, 9, 0, 655399, 9, 0, 655400, 9, 0, 655401, 9, 0, 655402, 9, 0, 655403, 9, 0, 655404, 9, 0, 655405, 9, 0, 655406, 9, 0, 655407, 9, 0, 655408, 9, 0, 655409, 9, 0, 655410, 9, 0, 655411, 9, 0, 655412, 9, 0, 655413, 9, 0, 655414, 9, 0, 655415, 9, 0, 655416, 9, 0, 655417, 9, 0, 655418, 9, 0, 655419, 9, 0, 655420, 9, 0, 655421, 9, 0, 655422, 9, 0, 720898, -1073741824, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720928, 9, 0, 720931, 9, 0, 720932, 9, 0, 720933, 9, 0, 720934, 9, 0, 720935, 9, 0, 720936, 9, 0, 720937, 9, 0, 720938, 9, 0, 720939, 9, 0, 720940, 9, 0, 720941, 9, 0, 720942, 9, 0, 720943, 9, 0, 720944, 9, 0, 720945, 9, 0, 720946, 9, 0, 720947, 9, 0, 720948, 9, 0, 720949, 9, 0, 720950, 9, 0, 720951, 9, 0, 720952, 9, 0, 720953, 9, 0, 720954, 9, 0, 720955, 9, 0, 720956, 9, 0, 720957, 9, 0, 720958, 9, 0, 786434, -1073741824, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786464, 9, 0, 786466, 9, 0, 786467, 9, 0, 786468, 9, 0, 786469, 9, 0, 786470, 9, 0, 786471, 9, 0, 786472, 9, 0, 786473, 9, 0, 786481, 9, 0, 786482, 9, 0, 786483, 9, 0, 786484, 9, 0, 786485, 9, 0, 786486, 9, 0, 786487, 9, 0, 786488, 9, 0, 786489, 9, 0, 786490, 9, 0, 786491, 9, 0, 786492, 9, 0, 786493, 9, 0, 786494, 9, 0, 851970, -1073741824, 0, 851971, 9, 0, 851972, 9, 0, 851973, 9, 0, 851974, 9, 0, 851980, 9, 0, 851991, 9, 0, 851992, 9, 0, 851995, 9, 0, 851996, 9, 0, 851997, 9, 0, 852002, 9, 0, 852003, 9, 0, 852004, 9, 0, 852005, 9, 0, 852006, 9, 0, 852007, 9, 0, 852008, 9, 0, 852009, 9, 0, 917506, -1073741787, 0, 917507, 9, 0, 917508, 9, 0, 917509, 9, 0, 917510, 9, 0, 917511, 9, 0, 917512, 9, 0, 917515, 9, 0, 917516, 9, 0, 917517, 9, 0, 917518, 9, 0, 917526, 9, 0, 917527, 9, 0, 917528, 9, 0, 917529, 9, 0, 917531, 9, 0, 917532, 9, 0, 917533, 9, 0, 917534, 9, 0, 917535, 9, 0, 917536, 9, 0, 917537, 9, 0, 917538, 9, 0, 917539, 9, 0, 917540, 9, 0, 917541, 9, 0, 917542, 9, 0, 917543, 9, 0, 917544, 9, 0, 917545, 9, 0, 983043, -1073741824, 0, 983044, 9, 0, 983045, 9, 0, 983046, 9, 0, 983047, 9, 0, 983048, 9, 0, 983049, 9, 0, 983050, 9, 0, 983051, 9, 0, 983052, 9, 0, 983053, 9, 0, 983054, 9, 0, 983055, 9, 0, 983056, 9, 0, 983057, 9, 0, 983058, 9, 0, 983059, 9, 0, 983060, 9, 0, 983061, 9, 0, 983062, 9, 0, 983063, 9, 0, 983064, 9, 0, 983065, 9, 0, 983066, 9, 0, 983067, 9, 0, 983068, 9, 0, 983069, 9, 0, 983070, 9, 0, 983071, 9, 0, 983072, 9, 0, 983073, 9, 0, 983074, 9, 0, 983075, 9, 0, 983076, 9, 0, 983077, 9, 0, 983078, 9, 0, 983079, 9, 0, 983080, 9, 0, 983081, 9, 0, 1048579, -1073741824, 0, 1048580, 9, 0, 1048581, 9, 0, 1048582, 9, 0, 1048583, 9, 0, 1048584, 9, 0, 1048585, 9, 0, 1048586, 9, 0, 1048587, 9, 0, 1048588, 9, 0, 1048589, 9, 0, 1048590, 9, 0, 1048591, 9, 0, 1048592, 9, 0, 1048593, 9, 0, 1048594, 9, 0, 1048595, 9, 0, 1048596, 9, 0, 1048597, 9, 0, 1048598, 9, 0, 1048599, 9, 0, 1048600, 9, 0, 1048601, 9, 0, 1048602, 9, 0, 1048603, 9, 0, 1048604, 9, 0, 1048605, 9, 0, 1048606, 9, 0, 1048607, 9, 0, 1048608, 9, 0, 1048609, 9, 0, 1048610, 9, 0, 1048611, 9, 0, 1048612, 9, 0, 1048613, 9, 0, 1048614, 9, 0, 1048615, 9, 0, 1048616, 9, 0, 1114115, -1073741824, 0, 1114116, 9, 0, 1114117, 9, 0, 1114118, 9, 0, 1114119, 9, 0, 1114120, 9, 0, 1114121, 9, 0, 1114122, 9, 0, 1114123, 9, 0, 1114124, 9, 0, 1114125, 9, 0, 1114126, 9, 0, 1114127, 9, 0, 1114128, 9, 0, 1114129, 9, 0, 1114130, 9, 0, 1114131, 9, 0, 1114132, 9, 0, 1114133, 9, 0, 1114134, 9, 0, 1114135, 9, 0, 1114136, 9, 0, 1114137, 9, 0, 1114138, 9, 0, 1114139, 9, 0, 1114140, 9, 0, 1114141, 9, 0, 1114142, 9, 0, 1114143, 9, 0, 1114144, 9, 0, 1114145, 9, 0, 1114146, 9, 0, 1114147, 9, 0, 1114148, 9, 0, 1114149, 9, 0, 1114150, 9, 0, 1114151, 9, 0, 1114152, 9, 0, 1179651, -1073741824, 0, 1179652, 9, 0, 1179653, 9, 0, 1179654, 9, 0, 1179655, 9, 0, 1179656, 9, 0, 1179657, 9, 0, 1179658, 9, 0, 1179659, 9, 0, 1179660, 9, 0, 1179661, 9, 0, 1179662, 9, 0, 1179663, 9, 0, 1179664, 9, 0, 1179665, 9, 0, 1179666, 9, 0, 1179667, 9, 0, 1179668, 9, 0, 1179669, 9, 0, 1179670, 9, 0, 1179671, 9, 0, 1179672, 9, 0, 1179673, 9, 0, 1179674, 9, 0, 1179675, 9, 0, 1179676, 9, 0, 1179677, 9, 0, 1179678, 9, 0, 1179679, 9, 0, 1179680, 9, 0, 1179681, 9, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Entrance" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_layer = 0
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance"]
shape = SubResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Collectibles" type="Node2D" parent="."]
z_index = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Signs" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="StartSign" parent="Signs" instance=ExtResource( 7 )]
position = Vector2( 80, -16 )

[node name="EndSign" parent="Signs" instance=ExtResource( 8 )]
position = Vector2( 3936, 560 )

[node name="Player" parent="." instance=ExtResource( 15 )]
position = Vector2( -96, -16 )
z_index = 1

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.7, 0.7 )
limit_smoothed = true
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 50 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -12.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerUI" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="ScoreUI" parent="CanvasLayer" instance=ExtResource( 6 )]

[connection signal="body_exited" from="Entrance" to="." method="_on_Entrance_body_exited"]
[connection signal="playerHasCrossed" from="Signs/StartSign" to="." method="_on_StartSign_playerHasCrossed"]
[connection signal="playerReached" from="Signs/EndSign" to="." method="_on_EndSign_playerReached"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="timeout" from="CanvasLayer/TimerUI" to="." method="_on_TimerUI_timeout"]
